--- a/Assets/Plugins/Android/gradleTemplate.properties
+++ b/Assets/Plugins/Android/gradleTemplate.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx**JVM_HEAP_SIZE**M
 org.gradle.parallel=true
-android.enableR8=**MINIFY_WITH_R_EIGHT**
+android.enableR8=false
 unityStreamingAssets=**STREAMING_ASSETS**
 **ADDITIONAL_PROPERTIES**
